--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>
-    <%= yield %>
+    <main class="
+      flex flex-col items-center justify-center
+      bg-fixed h-screen w-full"
+    >
+      <%= yield %>
+    </main>
   </body>
 </html>
