Set content width is 60% of the screen

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,2 +1,2 @@
 <!-- Initialize the react app when this page loads -->
-<%= content_tag(:div, '', id: 'react_app', data: { controller: 'react-app' }) %>
+<%= content_tag(:div, '', id: 'react_app', class: 'w-3/5', data: { controller: 'react-app' }) %>
